<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/inci_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inc_titulo"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="@dimen/padding_between"/>

    <TextView
        android:id="@+id/inc_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_inci"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="@dimen/padding_between"/>

    <TextView
        android:id="@+id/inc_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_inci"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="@dimen/padding_between"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inc_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inc_estado"
            android:paddingBottom="@dimen/padding_between"
            android:paddingTop="@dimen/padding_between"/>

    </LinearLayout>

</LinearLayout>
