<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:id="@+id/login_formulario"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
               android:contentDescription="@string/imageDesc"
                app:srcCompat="@drawable/logo_final" />


            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="#E7494B"
                android:paddingBottom="@dimen/padding_between"
                android:paddingTop="@dimen/padding_between"
                android:text="@string/info_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />





            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">



                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etiqueta_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etiqueta_password"
                    android:layout_marginBottom="@dimen/padding_between"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>



            <TextView
                android:id="@+id/olvidar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/olvidar_text"
                android:paddingBottom="@dimen/button_padding"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/auth_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrar_boton"
                android:background="#3D8BC1"
                android:textColor="#ffff"
                android:textStyle="bold"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/padding_between"
                android:layout_marginTop="@dimen/padding_between"
                android:background="#C8C9CB" />

            <Button
                android:id="@+id/crear_boton"
                style="?android:textAppearanceSmall"
                android:layout_marginTop="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_boton"
                android:background="#E7494B"
                android:textColor="#ffff" />

        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>