<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RegistroActivity"
    tools:showIn="@layout/activity_registro">

    <ScrollView
        android:id="@+id/registro_formulario"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">



                <AutoCompleteTextView
                    android:id="@+id/nombres"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etiqueta_nombre"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">



                <AutoCompleteTextView
                    android:id="@+id/apellidos"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etiqueta_apellidos"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">


                <AutoCompleteTextView
                    android:id="@+id/email_registro"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etiqueta_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_registro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etiqueta__regpassword1"
                    android:layout_marginBottom="@dimen/padding_between"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_registro2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etiqueta__regpassword2"
                    android:layout_marginBottom="@dimen/padding_between"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>




        </LinearLayout>


    </ScrollView>



</android.support.constraint.ConstraintLayout>