<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".IncidenciaActivity"
    tools:showIn="@layout/activity_incidencia">


    <ScrollView
        android:id="@+id/incidencia_formulario1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">



                <AutoCompleteTextView
                    android:id="@+id/titulo"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/incidencia_titulo_label"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">



                <AutoCompleteTextView
                    android:id="@+id/barrio_sector"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/incidencia_barrio_label"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Spinner
                    android:id="@+id/spiner_categorias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:prompt="@string/title_categoria"/>






            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">



                <AutoCompleteTextView
                    android:id="@+id/desc"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/desc_incidencia_label"
                    android:inputType="text"
                    android:maxLines="5"
                    android:singleLine="false"
                    android:padding="@dimen/edit_text_padding"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

            </android.support.design.widget.TextInputLayout>




        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>